add behavior task

--- a/events-and-interfaces/event-delegation/table/index.html
+++ b/events-and-interfaces/event-delegation/table/index.html
@@ -42,7 +42,7 @@
     <script src="table.js"></script>
     <script>
         var table = document.getElementsByClassName('grid')[0];
-        new Table(table);
+        new TableSorter(table);
     </script>
 
 </body>
