add simultaneously pressing

--- a/event-details/keyboard-events/only-number/index.html
+++ b/event-details/keyboard-events/only-number/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h2>Возможность ввода только чисел</h2>
+    <h2>Возможность ввода с клавиатуры только чисел</h2>
     Введите ваш возраст:
     <input type="text" data-enter-only="number">
     <script src="only-num.js">
