--- a/form-elements/validation/index.html
+++ b/form-elements/validation/index.html
@@ -4,13 +4,60 @@
 <head>
     <meta charset="utf-8">
     <style>
-       
-    </style>
+        td select,
+        td input {
+        width: 150px;
+        }
+
+        label {
+        display: block;
+        }
+        /* ваши стили */
+  </style>
 </head>
 
 <body>
-   
-   
+    <form lpformnum="1">
+        <table>
+        <tbody><tr>
+            <td>От кого</td>
+            <td>
+            <input name="from" type="text">
+            </td>
+        </tr>
+        <tr>
+            <td>Ваш пароль</td>
+            <td>
+            <input name="password" type="password" >
+            </td>
+        </tr>
+        <tr>
+            <td>Повторите пароль</td>
+            <td>
+            <input name="password2" type="password">
+            </td>
+        </tr>
+        <tr>
+            <td>Куда</td>
+            <td>
+            <select name="to">
+                <option></option>
+                <option value="1">Отдел снабжения</option>
+                <option value="2">Отдел разработки</option>
+                <option value="3">Директору</option>
+            </select>
+            </td>
+        </tr>
+        </tbody></table>
+
+        Сообщение:
+        <label>
+        <textarea name="message" style="display:block;width:400px;height:100px"></textarea>
+        </label>
+
+        <input type="button" onclick="validate(this.form)" value="Проверить">
+    </form>
+
     <script src="valdate.js">
     </script>
      <script>
