--- a/objects-more/call-apply/sum-args/index.html
+++ b/objects-more/call-apply/sum-args/index.html
@@ -2,17 +2,19 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 </head>
 
 <body>
-    <h2>Суммирование аргументов</h2>
-    <script src="sum-args.js">
-    </script>
+  <h2>Суммирование аргументов</h2>
+  <script src="sum-args.js">
+  </script>
 
-    <script>
-      alert( sumArgs(1, 2, 3) );
-    </script>
+  <script>
+    alert(sumArgs(1, 2, 3));
+
+    alert(sumArgs2(1, 2, 3));
+  </script>
 
 </body>
 
