--- a/oop/functional-inheritance/coffeemachine-fix-run/index.html
+++ b/oop/functional-inheritance/coffeemachine-fix-run/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h2>
-      <a href="http://learn.javascript.ru/task/setter-onready">Создать сеттер для onReady</a>
+      <a href="http://learn.javascript.ru/task/coffeemachine-fix-run">Запускать только при включённой кофеварке</a>
     </h2>
 
     <script src="coffeeMachine-fix-run.js">
