--- a/event-details/mouse-clicks/selectable-listls/index.html
+++ b/event-details/mouse-clicks/selectable-listls/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <title>Home</title>
     <meta charset="utf-8">
     <style>
         .selected {
@@ -10,6 +11,7 @@
 
         li {
             cursor: pointer;
+            user-select: none;
         }
     </style>
 </head>
