add mouse event task

--- a/event-details/mousemove-mouseover-mouseout-mouseenter-mouseleave/behavior-nested-tooltip/index.html
+++ b/event-details/mousemove-mouseover-mouseout-mouseenter-mouseleave/behavior-nested-tooltip/index.html
@@ -29,6 +29,14 @@
             text-align: justify;
             margin: 10px 3px;
         }
+
+        .tooltip {
+          position: fixed;
+          display: none;
+          background-color: #fff;
+          border: 2px solid green;
+          padding: 16px;
+        }
     </style>
 </head>
 
